force-app/main/default/objects/Site_Access_Log__c/Site_Access_Log__c.object-meta.xml
<CustomObject>
    <label>Site Access Log</label>
    <nameField>
        <displayFormat>SAL-{00000}</displayFormat>
        <label>Site Access Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Access Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>