force-app/main/default/objects/Site_Access_Log__c/fields/Accessed_At__c.field-meta.xml
<CustomField>
    <fullName>Accessed_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accessed At</label>
    <type>DateTime</type>
</CustomField>