force-app/main/default/objects/Site_Access_Log__c/fields/Alert_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Alert_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Triggered</label>
    <type>Checkbox</type>
</CustomField>