force-app/main/default/objects/Site_Access_Log__c/fields/Consent_Request__c.field-meta.xml
<CustomField>
    <fullName>Consent_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent Request</label>
    <referenceTo>Consent_Request_Item__c</referenceTo>
    <relationshipLabel>Site Access Logs</relationshipLabel>
    <relationshipName>Site_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>