force-app/main/default/objects/Site_Access_Log__c/fields/Data_Subject__c.field-meta.xml
<CustomField>
    <fullName>Data_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Subject</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Access Logs</relationshipLabel>
    <relationshipName>DataSubject_Site_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>