force-app/main/default/objects/Site_Access_Log__c/fields/Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Token_Hash__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Token Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>